# RoyaOS

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  setup_directories.cmd
config/: config.example.yaml
crates/interface/: Cargo.toml
crates/interface/src/: lib.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: lib.rs
crates/kernel/src/tests/: kernel_tests.rs  mod.rs  subsystem_tests.rs  syscall_tests.rs  test_utils.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/security/: Cargo.toml
crates/security/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
docs/: architecture.puml  installation.md  user_guide.md
features/: basic_scenario.feature
src/: config.rs  error.rs  main.rs
