[package]
name = "royaos-interface"
version = "0.1.0"
edition = "2021"
authors = ["RoyaOS Team"]
description = "Interface module for RoyaOS"
license = "BSD-3-Clause"

[dependencies]
log = "0.4.21"
thiserror = "1.0.57"
async-trait = "0.1.77"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
uuid = { version = "1.7.0", features = ["v4"] }
